  the compiler.

* We have enabled stricter checking of the requirement that a type, inst
  or a mode that is *not* exported from a module may not be used in the
  declarations of entities (such as predicates and typeclasses) that *is*
  exported from that module. This may require the explicit export of e.g.
  some types that previously were not exported.

* References to everything imported via `:- use_module' declarations
  must now be fully module qualified.

* `for' is now an operator.

* It is now an error for a program to redefine a builtin type.  The affected
  type names are:

      int
      uint
      float
      character
      string
      {}
      =
      pred
      func
      pure
      semipure
      impure
      ''

* It is now an error for a program to redefine a builtin inst.  The affected
  inst names are:

      =<
      any
      bound
      bound_unique
      clobbered
      clobbered_any
      free
      ground
      is
      mostly_clobbered
      mostly_unique
      mostly_unique_any
      not_reached
      unique
      unique_any

* It is now an error for a program to redefine a builtin mode.  The affected
  mode names are:

      =
      >>
      any_func
      any_pred
      func
      is
      pred

* We have deleted the builtin inst synonyms `old' and `new': their uses
  should be replaced with `any' and `free' respectively.

* We have deleted the builtin modes `no' and `oo': their uses should be
  replaced with `oa' and `ia' respectively.

* The minimum version of the Java platform required by Mercury's Java
  backend is now Java SE 6.

* The representation of integer constants in the standard library's term and
  lexer modules has been generalised.  The base, signedness and size of each
  integer constant is now recorded.  Furthermore, these modules now use
  arbitrary-precision integers to represent the values of integer constants.

  Code that relies on the old representation of integer constants used by