@@ -10,21 +10,31 @@
 :- module solver_type_bug.
 :- interface.
 
-:- solver type foo1.
-:- pragma foreign_type("C", foo1, "int").
-:- pragma foreign_type("Java", foo1, "int").
-:- pragma foreign_type("Erlang", foo1, "").
+:- solver type foo
+    where representation is int,
+          ground         is ground,
+          any            is ground,
+          equality       is eq_foo.
 
-:- type foo2
-    --->    foo2(foo1).
+:- pred eq_foo(foo::in(any), foo::in(any)) is semidet.
 
-:- pred p1(foo1).
+:- type bar
+    --->    bar(foo).
+
+:- pred p1(foo).
 :- mode p1(in(any)) is nondet.
 
-:- pred p2(foo2).
+:- pred p2(bar).
 :- mode p2(in(any)) is nondet.
 
 :- implementation.
+
+eq_foo(X, Y) :-
+    promise_pure (
+        impure RX = 'representation of any foo/0'(X),
+        impure RY = 'representation of any foo/0'(Y),
+        RX = RY
+    ).
 
 p1(X) :-
     q1(X).
@@ -32,11 +42,11 @@ p1(X) :-
 p2(X) :-
     q2(X).
 
-:- pred q1(foo1).
+:- pred q1(foo).
 :- mode q1(in(any)) is nondet.
 :- pragma external_pred(q1/1).
 
-:- pred q2(foo2).
+:- pred q2(bar).
 :- mode q2(in(any)) is nondet.
 :- pragma external_pred(q2/1).
 
@@ -46,8 +56,6 @@ q2_1_p_0(_, _) -> void.
 ").
 
 :- pragma foreign_code("Java", "
-
     private static void q1_1_p_0(int a1, jmercury.runtime.MethodPtr a2, java.lang.Object a3) {}
-    private static void q2_1_p_0(Foo2_0 a1, jmercury.runtime.MethodPtr a2, java.lang.Object a3) {}
-
+    private static void q2_1_p_0(Bar_0 a1, jmercury.runtime.MethodPtr a2, java.lang.Object a3) {}
 ").
